tests/algorithms/x/C/graphs/basic_graphs.error
compile: exit status 1
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:222:43: error: braced-group within expression allowed only inside a function
  222 | static long long* g_weighted_vals_0[3] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 2LL; tmp[1] = 7LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 3LL; tmp[1] = 9LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 6LL; tmp[1] = 14LL; tmp;})};
      |                                           ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:222:129: error: braced-group within expression allowed only inside a function
  222 | static long long* g_weighted_vals_0[3] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 2LL; tmp[1] = 7LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 3LL; tmp[1] = 9LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 6LL; tmp[1] = 14LL; tmp;})};
      |                                                                                                                                 ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:222:215: error: braced-group within expression allowed only inside a function
  222 | static long long* g_weighted_vals_0[3] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 2LL; tmp[1] = 7LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 3LL; tmp[1] = 9LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 6LL; tmp[1] = 14LL; tmp;})};
      |                                                                                                                                                                                                                       ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:223:43: error: braced-group within expression allowed only inside a function
  223 | static long long* g_weighted_vals_1[3] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 1LL; tmp[1] = 7LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 3LL; tmp[1] = 10LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 4LL; tmp[1] = 15LL; tmp;})};
      |                                           ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:223:129: error: braced-group within expression allowed only inside a function
  223 | static long long* g_weighted_vals_1[3] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 1LL; tmp[1] = 7LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 3LL; tmp[1] = 10LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 4LL; tmp[1] = 15LL; tmp;})};
      |                                                                                                                                 ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:223:216: error: braced-group within expression allowed only inside a function
  223 | static long long* g_weighted_vals_1[3] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 1LL; tmp[1] = 7LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 3LL; tmp[1] = 10LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 4LL; tmp[1] = 15LL; tmp;})};
      |                                                                                                                                                                                                                        ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:224:43: error: braced-group within expression allowed only inside a function
  224 | static long long* g_weighted_vals_2[4] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 1LL; tmp[1] = 9LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 2LL; tmp[1] = 10LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 4LL; tmp[1] = 11LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 6LL; tmp[1] = 2LL; tmp;})};
      |                                           ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:224:129: error: braced-group within expression allowed only inside a function
  224 | static long long* g_weighted_vals_2[4] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 1LL; tmp[1] = 9LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 2LL; tmp[1] = 10LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 4LL; tmp[1] = 11LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 6LL; tmp[1] = 2LL; tmp;})};
      |                                                                                                                                 ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:224:216: error: braced-group within expression allowed only inside a function
  224 | static long long* g_weighted_vals_2[4] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 1LL; tmp[1] = 9LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 2LL; tmp[1] = 10LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 4LL; tmp[1] = 11LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 6LL; tmp[1] = 2LL; tmp;})};
      |                                                                                                                                                                                                                        ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:224:303: error: braced-group within expression allowed only inside a function
  224 | static long long* g_weighted_vals_2[4] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 1LL; tmp[1] = 9LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 2LL; tmp[1] = 10LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 4LL; tmp[1] = 11LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 6LL; tmp[1] = 2LL; tmp;})};
      |                                                                                                                                                                                                                                                                                                               ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:225:43: error: braced-group within expression allowed only inside a function
  225 | static long long* g_weighted_vals_3[3] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 2LL; tmp[1] = 15LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 3LL; tmp[1] = 11LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 5LL; tmp[1] = 6LL; tmp;})};
      |                                           ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:225:130: error: braced-group within expression allowed only inside a function
  225 | static long long* g_weighted_vals_3[3] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 2LL; tmp[1] = 15LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 3LL; tmp[1] = 11LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 5LL; tmp[1] = 6LL; tmp;})};
      |                                                                                                                                  ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:225:217: error: braced-group within expression allowed only inside a function
  225 | static long long* g_weighted_vals_3[3] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 2LL; tmp[1] = 15LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 3LL; tmp[1] = 11LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 5LL; tmp[1] = 6LL; tmp;})};
      |                                                                                                                                                                                                                         ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:226:43: error: braced-group within expression allowed only inside a function
  226 | static long long* g_weighted_vals_4[2] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 4LL; tmp[1] = 6LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 6LL; tmp[1] = 9LL; tmp;})};
      |                                           ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:226:129: error: braced-group within expression allowed only inside a function
  226 | static long long* g_weighted_vals_4[2] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 4LL; tmp[1] = 6LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 6LL; tmp[1] = 9LL; tmp;})};
      |                                                                                                                                 ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:227:43: error: braced-group within expression allowed only inside a function
  227 | static long long* g_weighted_vals_5[3] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 1LL; tmp[1] = 14LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 3LL; tmp[1] = 2LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 5LL; tmp[1] = 9LL; tmp;})};
      |                                           ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:227:130: error: braced-group within expression allowed only inside a function
  227 | static long long* g_weighted_vals_5[3] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 1LL; tmp[1] = 14LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 3LL; tmp[1] = 2LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 5LL; tmp[1] = 9LL; tmp;})};
      |                                                                                                                                  ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:227:216: error: braced-group within expression allowed only inside a function
  227 | static long long* g_weighted_vals_5[3] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 1LL; tmp[1] = 14LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 3LL; tmp[1] = 2LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 5LL; tmp[1] = 9LL; tmp;})};
      |                                                                                                                                                                                                                        ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:246:39: error: braced-group within expression allowed only inside a function
  246 | static long long* g_prim_vals_0[2] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 2LL; tmp[1] = 1LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 3LL; tmp[1] = 3LL; tmp;})};
      |                                       ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:246:125: error: braced-group within expression allowed only inside a function
  246 | static long long* g_prim_vals_0[2] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 2LL; tmp[1] = 1LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 3LL; tmp[1] = 3LL; tmp;})};
      |                                                                                                                             ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:247:39: error: braced-group within expression allowed only inside a function
  247 | static long long* g_prim_vals_1[3] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 1LL; tmp[1] = 1LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 3LL; tmp[1] = 1LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 4LL; tmp[1] = 6LL; tmp;})};
      |                                       ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:247:125: error: braced-group within expression allowed only inside a function
  247 | static long long* g_prim_vals_1[3] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 1LL; tmp[1] = 1LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 3LL; tmp[1] = 1LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 4LL; tmp[1] = 6LL; tmp;})};
      |                                                                                                                             ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:247:211: error: braced-group within expression allowed only inside a function
  247 | static long long* g_prim_vals_1[3] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 1LL; tmp[1] = 1LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 3LL; tmp[1] = 1LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 4LL; tmp[1] = 6LL; tmp;})};
      |                                                                                                                                                                                                                   ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:248:39: error: braced-group within expression allowed only inside a function
  248 | static long long* g_prim_vals_2[3] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 1LL; tmp[1] = 3LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 2LL; tmp[1] = 1LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 4LL; tmp[1] = 2LL; tmp;})};
      |                                       ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:248:125: error: braced-group within expression allowed only inside a function
  248 | static long long* g_prim_vals_2[3] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 1LL; tmp[1] = 3LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 2LL; tmp[1] = 1LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 4LL; tmp[1] = 2LL; tmp;})};
      |                                                                                                                             ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:248:211: error: braced-group within expression allowed only inside a function
  248 | static long long* g_prim_vals_2[3] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 1LL; tmp[1] = 3LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 2LL; tmp[1] = 1LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 4LL; tmp[1] = 2LL; tmp;})};
      |                                                                                                                                                                                                                   ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:249:39: error: braced-group within expression allowed only inside a function
  249 | static long long* g_prim_vals_3[2] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 2LL; tmp[1] = 6LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 3LL; tmp[1] = 2LL; tmp;})};
      |                                       ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:249:125: error: braced-group within expression allowed only inside a function
  249 | static long long* g_prim_vals_3[2] = {({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 2LL; tmp[1] = 6LL; tmp;}), ({long long *tmp = malloc(2 * sizeof(long long)); tmp[0] = 3LL; tmp[1] = 2LL; tmp;})};
      |                                                                                                                             ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c: In function ‘dfs’:
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:290:14: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘long long int’ [-Wformat=]
  290 |     printf("%d\n", s);
      |             ~^     ~
      |              |     |
      |              int   long long int
      |             %lld
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:302:30: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘long long int’ [-Wformat=]
  302 |                     printf("%d\n", v);
      |                             ~^     ~
      |                              |     |
      |                              int   long long int
      |                             %lld
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c: In function ‘bfs’:
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:321:14: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘long long int’ [-Wformat=]
  321 |     printf("%d\n", s);
      |             ~^     ~
      |              |     |
      |              int   long long int
      |             %lld
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:334:30: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘long long int’ [-Wformat=]
  334 |                     printf("%d\n", v);
      |                             ~^     ~
      |                              |     |
      |                              int   long long int
      |                             %lld
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c: In function ‘dijkstra’:
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:376:32: warning: passing argument 1 of ‘contains_int’ from incompatible pointer type [-Wincompatible-pointer-types]
  376 |             if (!(contains_int(known, known_len, k)) && (d < mini)) {
      |                                ^~~~~
      |                                |
      |                                long long int *
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:15:35: note: expected ‘const int *’ but argument is of type ‘long long int *’
   15 | static int contains_int(const int arr[], size_t len, int val) {
      |                         ~~~~~~~~~~^~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:384:22: error: expected identifier or ‘(’ before ‘[’ token
  384 |             long long[]* __tmp2 = map_get_il(g.keys, g.vals, g.lens, g.len, u, NULL);
      |                      ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:385:45: error: request for member ‘keys’ in something not a structure or union
  385 |             size_t __tmp2_len = map_len_il(g.keys, g.vals, g.lens, g.len, u);
      |                                             ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:385:53: error: request for member ‘vals’ in something not a structure or union
  385 |             size_t __tmp2_len = map_len_il(g.keys, g.vals, g.lens, g.len, u);
      |                                                     ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:385:61: error: request for member ‘lens’ in something not a structure or union
  385 |             size_t __tmp2_len = map_len_il(g.keys, g.vals, g.lens, g.len, u);
      |                                                             ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:385:69: error: request for member ‘len’ in something not a structure or union
  385 |             size_t __tmp2_len = map_len_il(g.keys, g.vals, g.lens, g.len, u);
      |                                                                     ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:387:32: error: ‘__tmp2’ undeclared (first use in this function)
  387 |                 long long *e = __tmp2[__i];
      |                                ^~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:387:32: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:388:32: error: ‘__tmp2_lens’ undeclared (first use in this function); did you mean ‘__tmp2_len’?
  388 |                 size_t e_len = __tmp2_lens[__i];
      |                                ^~~~~~~~~~~
      |                                __tmp2_len
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:389:33: warning: initialization of ‘const char *’ from ‘long long int’ makes pointer from integer without a cast [-Wint-conversion]
  389 |                 const char* v = e[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? e_len + _mochi_idx : _mochi_idx;})];
      |                                 ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:390:33: warning: initialization of ‘const char *’ from ‘long long int’ makes pointer from integer without a cast [-Wint-conversion]
  390 |                 const char* w = e[(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? e_len + _mochi_idx : _mochi_idx;})];
      |                                 ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:391:36: warning: passing argument 1 of ‘contains_int’ from incompatible pointer type [-Wincompatible-pointer-types]
  391 |                 if (!(contains_int(keys, keys_len, v))) {
      |                                    ^~~~
      |                                    |
      |                                    long long int *
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:15:35: note: expected ‘const int *’ but argument is of type ‘long long int *’
   15 | static int contains_int(const int arr[], size_t len, int val) {
      |                         ~~~~~~~~~~^~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:391:52: warning: passing argument 3 of ‘contains_int’ makes integer from pointer without a cast [-Wint-conversion]
  391 |                 if (!(contains_int(keys, keys_len, v))) {
      |                                                    ^
      |                                                    |
      |                                                    const char *
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:15:58: note: expected ‘int’ but argument is of type ‘const char *’
   15 | static int contains_int(const int arr[], size_t len, int val) {
      |                                                      ~~~~^~~
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:392:67: warning: passing argument 3 of ‘list_append_long_long’ makes integer from pointer without a cast [-Wint-conversion]
  392 |                     keys = list_append_long_long(keys, &keys_len, v);
      |                                                                   ^
      |                                                                   |
      |                                                                   const char *
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:191:80: note: expected ‘long long int’ but argument is of type ‘const char *’
  191 | static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
      |                                                                      ~~~~~~~~~~^~~
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:396:59: warning: passing argument 3 of ‘contains_map_int’ makes integer from pointer without a cast [-Wint-conversion]
  396 |                 if (contains_map_int(dist.keys, dist.len, v)) {
      |                                                           ^
      |                                                           |
      |                                                           const char *
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:22:63: note: expected ‘int’ but argument is of type ‘const char *’
   22 | static int contains_map_int(const int keys[], size_t len, int key) {
      |                                                           ~~~~^~~
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:397:70: warning: passing argument 4 of ‘map_get_ii’ makes integer from pointer without a cast [-Wint-conversion]
  397 |                     cur = map_get_ii(dist.keys, dist.vals, dist.len, v);
      |                                                                      ^
      |                                                                      |
      |                                                                      const char *
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:88:75: note: expected ‘int’ but argument is of type ‘const char *’
   88 | static int map_get_ii(const int keys[], const int vals[], size_t len, int key) {
      |                                                                       ~~~~^~~
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:401:36: warning: passing argument 1 of ‘contains_int’ from incompatible pointer type [-Wincompatible-pointer-types]
  401 |                 if (!(contains_int(known, known_len, v)) && (alt < cur)) {
      |                                    ^~~~~
      |                                    |
      |                                    long long int *
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:15:35: note: expected ‘const int *’ but argument is of type ‘long long int *’
   15 | static int contains_int(const int arr[], size_t len, int val) {
      |                         ~~~~~~~~~~^~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:401:54: warning: passing argument 3 of ‘contains_int’ makes integer from pointer without a cast [-Wint-conversion]
  401 |                 if (!(contains_int(known, known_len, v)) && (alt < cur)) {
      |                                                      ^
      |                                                      |
      |                                                      const char *
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:15:58: note: expected ‘int’ but argument is of type ‘const char *’
   15 | static int contains_int(const int arr[], size_t len, int val) {
      |                                                      ~~~~^~~
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:401:66: warning: comparison between pointer and integer
  401 |                 if (!(contains_int(known, known_len, v)) && (alt < cur)) {
      |                                                                  ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:402:41: warning: passing argument 2 of ‘map_set_ii’ makes integer from pointer without a cast [-Wint-conversion]
  402 |                     map_set_ii(&(dist), v, alt);
      |                                         ^
      |                                         |
      |                                         const char *
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:95:38: note: expected ‘int’ but argument is of type ‘const char *’
   95 | static void map_set_ii(MapII *m, int key, int val) {
      |                                  ~~~~^~~
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:402:44: warning: passing argument 3 of ‘map_set_ii’ makes integer from pointer without a cast [-Wint-conversion]
  402 |                     map_set_ii(&(dist), v, alt);
      |                                            ^~~
      |                                            |
      |                                            const char *
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:95:47: note: expected ‘int’ but argument is of type ‘const char *’
   95 | static void map_set_ii(MapII *m, int key, int val) {
      |                                           ~~~~^~~
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:403:41: warning: passing argument 2 of ‘map_set_ii’ makes integer from pointer without a cast [-Wint-conversion]
  403 |                     map_set_ii(&(path), v, u);
      |                                         ^
      |                                         |
      |                                         const char *
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:95:38: note: expected ‘int’ but argument is of type ‘const char *’
   95 | static void map_set_ii(MapII *m, int key, int val) {
      |                                  ~~~~^~~
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c: In function ‘topo’:
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:453:18: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘long long int’ [-Wformat=]
  453 |         printf("%d\n", v);
      |                 ~^     ~
      |                  |     |
      |                  int   long long int
      |                 %lld
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c: In function ‘prim’:
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:520:32: warning: passing argument 1 of ‘contains_int’ from incompatible pointer type [-Wincompatible-pointer-types]
  520 |             if (!(contains_int(known, known_len, k)) && (d < mini)) {
      |                                ^~~~~
      |                                |
      |                                long long int *
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:15:35: note: expected ‘const int *’ but argument is of type ‘long long int *’
   15 | static int contains_int(const int arr[], size_t len, int val) {
      |                         ~~~~~~~~~~^~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:529:22: error: expected identifier or ‘(’ before ‘[’ token
  529 |             long long[]* __tmp5 = map_get_il(g.keys, g.vals, g.lens, g.len, u, NULL);
      |                      ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:530:45: error: request for member ‘keys’ in something not a structure or union
  530 |             size_t __tmp5_len = map_len_il(g.keys, g.vals, g.lens, g.len, u);
      |                                             ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:530:53: error: request for member ‘vals’ in something not a structure or union
  530 |             size_t __tmp5_len = map_len_il(g.keys, g.vals, g.lens, g.len, u);
      |                                                     ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:530:61: error: request for member ‘lens’ in something not a structure or union
  530 |             size_t __tmp5_len = map_len_il(g.keys, g.vals, g.lens, g.len, u);
      |                                                             ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:530:69: error: request for member ‘len’ in something not a structure or union
  530 |             size_t __tmp5_len = map_len_il(g.keys, g.vals, g.lens, g.len, u);
      |                                                                     ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:532:32: error: ‘__tmp5’ undeclared (first use in this function)
  532 |                 long long *e = __tmp5[__i];
      |                                ^~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:533:32: error: ‘__tmp5_lens’ undeclared (first use in this function); did you mean ‘__tmp5_len’?
  533 |                 size_t e_len = __tmp5_lens[__i];
      |                                ^~~~~~~~~~~
      |                                __tmp5_len
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:534:33: warning: initialization of ‘const char *’ from ‘long long int’ makes pointer from integer without a cast [-Wint-conversion]
  534 |                 const char* v = e[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? e_len + _mochi_idx : _mochi_idx;})];
      |                                 ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:535:33: warning: initialization of ‘const char *’ from ‘long long int’ makes pointer from integer without a cast [-Wint-conversion]
  535 |                 const char* w = e[(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? e_len + _mochi_idx : _mochi_idx;})];
      |                                 ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:536:36: warning: passing argument 1 of ‘contains_int’ from incompatible pointer type [-Wincompatible-pointer-types]
  536 |                 if (!(contains_int(keys, keys_len, v))) {
      |                                    ^~~~
      |                                    |
      |                                    long long int *
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:15:35: note: expected ‘const int *’ but argument is of type ‘long long int *’
   15 | static int contains_int(const int arr[], size_t len, int val) {
      |                         ~~~~~~~~~~^~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:536:52: warning: passing argument 3 of ‘contains_int’ makes integer from pointer without a cast [-Wint-conversion]
  536 |                 if (!(contains_int(keys, keys_len, v))) {
      |                                                    ^
      |                                                    |
      |                                                    const char *
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:15:58: note: expected ‘int’ but argument is of type ‘const char *’
   15 | static int contains_int(const int arr[], size_t len, int val) {
      |                                                      ~~~~^~~
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:537:67: warning: passing argument 3 of ‘list_append_long_long’ makes integer from pointer without a cast [-Wint-conversion]
  537 |                     keys = list_append_long_long(keys, &keys_len, v);
      |                                                                   ^
      |                                                                   |
      |                                                                   const char *
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:191:80: note: expected ‘long long int’ but argument is of type ‘const char *’
  191 | static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
      |                                                                      ~~~~~~~~~~^~~
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:540:59: warning: passing argument 3 of ‘contains_map_int’ makes integer from pointer without a cast [-Wint-conversion]
  540 |                 if (contains_map_int(dist.keys, dist.len, v)) {
      |                                                           ^
      |                                                           |
      |                                                           const char *
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:22:63: note: expected ‘int’ but argument is of type ‘const char *’
   22 | static int contains_map_int(const int keys[], size_t len, int key) {
      |                                                           ~~~~^~~
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:541:70: warning: passing argument 4 of ‘map_get_ii’ makes integer from pointer without a cast [-Wint-conversion]
  541 |                     cur = map_get_ii(dist.keys, dist.vals, dist.len, v);
      |                                                                      ^
      |                                                                      |
      |                                                                      const char *
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:88:75: note: expected ‘int’ but argument is of type ‘const char *’
   88 | static int map_get_ii(const int keys[], const int vals[], size_t len, int key) {
      |                                                                       ~~~~^~~
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:545:36: warning: passing argument 1 of ‘contains_int’ from incompatible pointer type [-Wincompatible-pointer-types]
  545 |                 if (!(contains_int(known, known_len, v)) && (w < cur)) {
      |                                    ^~~~~
      |                                    |
      |                                    long long int *
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:15:35: note: expected ‘const int *’ but argument is of type ‘long long int *’
   15 | static int contains_int(const int arr[], size_t len, int val) {
      |                         ~~~~~~~~~~^~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:545:54: warning: passing argument 3 of ‘contains_int’ makes integer from pointer without a cast [-Wint-conversion]
  545 |                 if (!(contains_int(known, known_len, v)) && (w < cur)) {
      |                                                      ^
      |                                                      |
      |                                                      const char *
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:15:58: note: expected ‘int’ but argument is of type ‘const char *’
   15 | static int contains_int(const int arr[], size_t len, int val) {
      |                                                      ~~~~^~~
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:545:64: warning: comparison between pointer and integer
  545 |                 if (!(contains_int(known, known_len, v)) && (w < cur)) {
      |                                                                ^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:546:41: warning: passing argument 2 of ‘map_set_ii’ makes integer from pointer without a cast [-Wint-conversion]
  546 |                     map_set_ii(&(dist), v, w);
      |                                         ^
      |                                         |
      |                                         const char *
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:95:38: note: expected ‘int’ but argument is of type ‘const char *’
   95 | static void map_set_ii(MapII *m, int key, int val) {
      |                                  ~~~~^~~
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:546:44: warning: passing argument 3 of ‘map_set_ii’ makes integer from pointer without a cast [-Wint-conversion]
  546 |                     map_set_ii(&(dist), v, w);
      |                                            ^
      |                                            |
      |                                            const char *
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:95:47: note: expected ‘int’ but argument is of type ‘const char *’
   95 | static void map_set_ii(MapII *m, int key, int val) {
      |                                           ~~~~^~~
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c: In function ‘main’:
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:654:18: error: incompatible type for argument 1 of ‘dijkstra’
  654 |         dijkstra(g_weighted, 1LL);
      |                  ^~~~~~~~~~
      |                  |
      |                  MapIL
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:360:26: note: expected ‘int’ but argument is of type ‘MapIL’
  360 | const char* dijkstra(int g, long long s) {
      |                      ~~~~^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:657:29: error: incompatible type for argument 1 of ‘prim’
  657 |         printf("%d\n", prim(g_prim, 1LL, 4LL));
      |                             ^~~~~~
      |                             |
      |                             MapIL
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:505:20: note: expected ‘int’ but argument is of type ‘MapIL’
  505 | long long prim(int g, long long s, long long n) {
      |                ~~~~^
/workspace/mochi/tests/algorithms/x/C/graphs/basic_graphs.c:658:18: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘long long int’ [-Wformat=]
  658 |         printf("%d\n", kruskal(edges_kruskal, edges_kruskal_len, edges_kruskal_lens, edges_kruskal_len, 4LL));
      |                 ~^     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                  |     |
      |                  int   long long int
      |                 %lld
